dynamodel_tests/tests/fails/attribute/invalid_name.stderr
error: Unknown field: `foo`
 --> tests/fails/attribute/invalid_name.rs:5:17
  |
5 |     #[dynamodel(foo(path = "unknown"))]
  |                 ^^^
